<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <group android:menuCategory="container">
        <item android:id="@+id/menu_setting"
            android:title="@string/menu_setting"
            android:icon = "@drawable/ic_settings_white_24dp"
            app:showAsAction="always" />
        <item android:id="@+id/menu_fav_movie"
            android:title="@string/fav_movie" />
        <item android:id="@+id/menu_fav_tv"
            android:title="@string/fav_tv" />
        <item android:id="@+id/menu_setting_reminder"
            android:title="@string/setting" />
    </group>
</menu>